--- a/KalkulatorTest/KalkulatorTest.csproj
+++ b/KalkulatorTest/KalkulatorTest.csproj
@@ -36,6 +36,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
